ANTLR/src/GrammarGyhParser.java
// Generated from GrammarGyh.g4 by ANTLR 4.7.2

import java.util.ArrayList;
import java.util.HashMap;
import java.util.Map;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarGyhParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Delim=1, OpRelMaior=2, OpRelMenor=3, OpRelIgual=4, OpRelDiferente=5, OpRelMaiorIgual=6, 
		OpRelMenorIgual=7, Terminal=8, OpBoolE=9, OpBoolOU=10, PCDec=11, PCInt=12, 
		PCProg=13, PCReal=14, PCSe=15, PCEntao=16, PCSenao=17, PCEnqto=18, PCIni=19, 
		PCFim=20, PCImprimir=21, PCLer=22, Atrib=23, AbrePar=24, FechaPar=25, 
		OpAritSom=26, OpAritSub=27, OpAritMult=28, OpAritDiv=29, Var=30, Cadeia=31, 
		NumInt=32, NumReal=33, Coment=34, EspBranco=35;
	public static final int
		RULE_programa = 0, RULE_listaDeclaracoes = 1, RULE_declaracao = 2, RULE_tipoVar = 3, 
		RULE_expressaoAritmetica = 4, RULE_expressaoAritmeticaCount = 5, RULE_termoAritmetico = 6, 
		RULE_termoAritmeticoCount = 7, RULE_fatorAritmetico = 8, RULE_expressaoRelacional = 9, 
		RULE_expressaoRelacionalCount = 10, RULE_termoRelacional = 11, RULE_operadorBooleano = 12, 
		RULE_listaComandos = 13, RULE_comando = 14, RULE_comandoAtribuicao = 15, 
		RULE_comandoEntrada = 16, RULE_comandoSaida = 17, RULE_comandoCondicao = 18, 
		RULE_comandoRepeticao = 19, RULE_subAlgoritmo = 20, RULE_opRel = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "listaDeclaracoes", "declaracao", "tipoVar", "expressaoAritmetica", 
			"expressaoAritmeticaCount", "termoAritmetico", "termoAritmeticoCount", 
			"fatorAritmetico", "expressaoRelacional", "expressaoRelacionalCount", 
			"termoRelacional", "operadorBooleano", "listaComandos", "comando", "comandoAtribuicao", 
			"comandoEntrada", "comandoSaida", "comandoCondicao", "comandoRepeticao", 
			"subAlgoritmo", "opRel"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'>'", "'<'", "'=='", "'!='", "'>='", "'<='", "';'", "'E'", 
			"'OU'", "'DEC'", "'INT'", "'PROG'", "'REAL'", "'SE'", "'ENTAO'", "'SENAO'", 
			"'ENQTO'", "'INI'", "'FIM'", "'IMPRIMIR'", "'LER'", "':='", "'('", "')'", 
			"'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Delim", "OpRelMaior", "OpRelMenor", "OpRelIgual", "OpRelDiferente", 
			"OpRelMaiorIgual", "OpRelMenorIgual", "Terminal", "OpBoolE", "OpBoolOU", 
			"PCDec", "PCInt", "PCProg", "PCReal", "PCSe", "PCEntao", "PCSenao", "PCEnqto", 
			"PCIni", "PCFim", "PCImprimir", "PCLer", "Atrib", "AbrePar", "FechaPar", 
			"OpAritSom", "OpAritSub", "OpAritMult", "OpAritDiv", "Var", "Cadeia", 
			"NumInt", "NumReal", "Coment", "EspBranco"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarGyh.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private String _varName;
	    private String _varType;
	    private String _varValue;
	    private String _varExp = "";
	    private String _conditional = "";
	    private String _conditionalIf = "";
	    private String _conditionalWhile = "";


	    private ProgramGeneratorGyh program = new ProgramGeneratorGyh();
	    private Symbol _varSymbol;
	    private SymbolTable tableSymbol = new SymbolTable();


	    private ArrayList<Comando> cmdList = new ArrayList<Comando>();
	    private ArrayList<Comando> auxList = new ArrayList<Comando>();
	    private ArrayList<Comando> listTrue = new ArrayList<Comando>();
	    private ArrayList<Comando> listFalse = new ArrayList<Comando>();
	    private ArrayList<Comando> listIf = new ArrayList<Comando>();
	    private ArrayList<Comando> listWhile = new ArrayList<Comando>();
	    private ArrayList<Comando> listElse = new ArrayList<Comando>();


	    public void generateComando(){
	        program.generateTarget();
	    }

	    public SymbolTable getTableSymbol(){
	        return tableSymbol;
	    }

	    public void verificaVariavel(String varName) {
	        if (!tableSymbol.contains(varName)) {
	            throw new RuntimeException("Variável " + varName + " não declarada.");
	        }
	    }

	public GrammarGyhParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<TerminalNode> Delim() { return getTokens(GrammarGyhParser.Delim); }
		public TerminalNode Delim(int i) {
			return getToken(GrammarGyhParser.Delim, i);
		}
		public TerminalNode PCDec() { return getToken(GrammarGyhParser.PCDec, 0); }
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public TerminalNode PCProg() { return getToken(GrammarGyhParser.PCProg, 0); }
		public ListaComandosContext listaComandos() {
			return getRuleContext(ListaComandosContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarGyhParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(Delim);
			setState(45);
			match(PCDec);
			setState(46);
			listaDeclaracoes();
			setState(47);
			match(Delim);
			setState(48);
			match(PCProg);
			System.out.println("passeido prog");
			setState(50);
			listaComandos();
			System.out.println("tonalista");
			program.setVarTable(tableSymbol);
			          System.out.println("Programa --->>> VarTabe");
			          program.setComandos(cmdList);
			          System.out.println("Programa --->>> Comandos");
			          program.generateTarget();
			          
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaDeclaracoesContext extends ParserRuleContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public ListaDeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterListaDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitListaDeclaracoes(this);
		}
	}

	public final ListaDeclaracoesContext listaDeclaracoes() throws RecognitionException {
		ListaDeclaracoesContext _localctx = new ListaDeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listaDeclaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			declaracao();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Var) {
				{
				setState(56);
				listaDeclaracoes();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(GrammarGyhParser.Var, 0); }
		public TerminalNode Delim() { return getToken(GrammarGyhParser.Delim, 0); }
		public TipoVarContext tipoVar() {
			return getRuleContext(TipoVarContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitDeclaracao(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(Var);
			setState(60);
			match(Delim);
			setState(61);
			tipoVar();

			             _varName = _input.LT(-3).getText();
			             _varType = _input.LT(-1).getText();
			             _varValue = null;
			             _varSymbol = new Symbol(_varName, _varType, _varValue);
			             if (!tableSymbol.contains(_varName)){
			                    tableSymbol.add(_varSymbol);
			                    System.out.println("Símbolo adicionado " + _varSymbol);
			            } else {
			                    System.out.println("Variável já declarada anteriormente: " + _varName);
			            }

			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoVarContext extends ParserRuleContext {
		public TerminalNode PCInt() { return getToken(GrammarGyhParser.PCInt, 0); }
		public TerminalNode PCReal() { return getToken(GrammarGyhParser.PCReal, 0); }
		public TipoVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterTipoVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitTipoVar(this);
		}
	}

	public final TipoVarContext tipoVar() throws RecognitionException {
		TipoVarContext _localctx = new TipoVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipoVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !(_la==PCInt || _la==PCReal) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoAritmeticaContext extends ParserRuleContext {
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public ExpressaoAritmeticaCountContext expressaoAritmeticaCount() {
			return getRuleContext(ExpressaoAritmeticaCountContext.class,0);
		}
		public ExpressaoAritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmetica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterExpressaoAritmetica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitExpressaoAritmetica(this);
		}
	}

	public final ExpressaoAritmeticaContext expressaoAritmetica() throws RecognitionException {
		ExpressaoAritmeticaContext _localctx = new ExpressaoAritmeticaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expressaoAritmetica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			termoAritmetico();
			setState(67);
			expressaoAritmeticaCount();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoAritmeticaCountContext extends ParserRuleContext {
		public TerminalNode OpAritSom() { return getToken(GrammarGyhParser.OpAritSom, 0); }
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public ExpressaoAritmeticaCountContext expressaoAritmeticaCount() {
			return getRuleContext(ExpressaoAritmeticaCountContext.class,0);
		}
		public TerminalNode OpAritSub() { return getToken(GrammarGyhParser.OpAritSub, 0); }
		public ExpressaoAritmeticaCountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmeticaCount; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterExpressaoAritmeticaCount(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitExpressaoAritmeticaCount(this);
		}
	}

	public final ExpressaoAritmeticaCountContext expressaoAritmeticaCount() throws RecognitionException {
		ExpressaoAritmeticaCountContext _localctx = new ExpressaoAritmeticaCountContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressaoAritmeticaCount);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpAritSom:
				{
				setState(69);
				match(OpAritSom);
				 if (!_varExp.isEmpty()) _varExp += "+"; 
				setState(71);
				termoAritmetico();
				setState(72);
				expressaoAritmeticaCount();
				}
				break;
			case OpAritSub:
				{
				setState(74);
				match(OpAritSub);
				 if (!_varExp.isEmpty()) _varExp += "-"; 
				setState(76);
				termoAritmetico();
				setState(77);
				expressaoAritmeticaCount();
				}
				break;
			case EOF:
			case OpRelMaior:
			case OpRelMenor:
			case OpRelIgual:
			case OpRelDiferente:
			case OpRelMaiorIgual:
			case OpRelMenorIgual:
			case OpBoolE:
			case OpBoolOU:
			case PCSe:
			case PCEntao:
			case PCSenao:
			case PCEnqto:
			case PCIni:
			case PCFim:
			case PCImprimir:
			case PCLer:
			case FechaPar:
			case Var:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoAritmeticoContext extends ParserRuleContext {
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public TermoAritmeticoCountContext termoAritmeticoCount() {
			return getRuleContext(TermoAritmeticoCountContext.class,0);
		}
		public TermoAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termoAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterTermoAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitTermoAritmetico(this);
		}
	}

	public final TermoAritmeticoContext termoAritmetico() throws RecognitionException {
		TermoAritmeticoContext _localctx = new TermoAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_termoAritmetico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			fatorAritmetico();
			setState(82);
			termoAritmeticoCount();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoAritmeticoCountContext extends ParserRuleContext {
		public TerminalNode OpAritMult() { return getToken(GrammarGyhParser.OpAritMult, 0); }
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public TermoAritmeticoCountContext termoAritmeticoCount() {
			return getRuleContext(TermoAritmeticoCountContext.class,0);
		}
		public TerminalNode OpAritDiv() { return getToken(GrammarGyhParser.OpAritDiv, 0); }
		public TermoAritmeticoCountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termoAritmeticoCount; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterTermoAritmeticoCount(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitTermoAritmeticoCount(this);
		}
	}

	public final TermoAritmeticoCountContext termoAritmeticoCount() throws RecognitionException {
		TermoAritmeticoCountContext _localctx = new TermoAritmeticoCountContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_termoAritmeticoCount);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpAritMult:
				{
				setState(84);
				match(OpAritMult);
				  if (!_varExp.isEmpty()) _varExp += "*"; 
				setState(86);
				fatorAritmetico();
				setState(87);
				termoAritmeticoCount();
				}
				break;
			case OpAritDiv:
				{
				setState(89);
				match(OpAritDiv);
				  if (!_varExp.isEmpty()) _varExp += "/"; 
				setState(91);
				fatorAritmetico();
				setState(92);
				termoAritmeticoCount();
				}
				break;
			case EOF:
			case OpRelMaior:
			case OpRelMenor:
			case OpRelIgual:
			case OpRelDiferente:
			case OpRelMaiorIgual:
			case OpRelMenorIgual:
			case OpBoolE:
			case OpBoolOU:
			case PCSe:
			case PCEntao:
			case PCSenao:
			case PCEnqto:
			case PCIni:
			case PCFim:
			case PCImprimir:
			case PCLer:
			case FechaPar:
			case OpAritSom:
			case OpAritSub:
			case Var:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FatorAritmeticoContext extends ParserRuleContext {
		public TerminalNode NumInt() { return getToken(GrammarGyhParser.NumInt, 0); }
		public TerminalNode NumReal() { return getToken(GrammarGyhParser.NumReal, 0); }
		public TerminalNode Var() { return getToken(GrammarGyhParser.Var, 0); }
		public TerminalNode AbrePar() { return getToken(GrammarGyhParser.AbrePar, 0); }
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public TerminalNode FechaPar() { return getToken(GrammarGyhParser.FechaPar, 0); }
		public FatorAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fatorAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).enterFatorAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarGyhListener ) ((GrammarGyhListener)listener).exitFatorAritmetico(this);
		}
	}

	public final FatorAritmeticoContext fatorAritmetico() throws RecognitionException {
		FatorAritmeticoContext _localctx = new FatorAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fatorAritmetico);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NumInt:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(NumInt);
				 _varExp += _input.LT(-1).getText();
				}
				break;
			case NumReal:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(NumReal);
				 _varExp += _input.LT(-1).getText();
				}
				break;
			case Var:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				match(Var);
				 verificaVariavel(_input.LT(-1).getText()); _varExp += _input.LT(-1).getText(); 
				}
				break;
			case AbrePar:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				match(AbrePar);
				 _varExp += "("; 
				setState(104);
				expressaoAritmetica();
				 _varExp += ")"; 
				setState(106);
				match(FechaPar);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
